--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Educino - Online Courses and Education HTML Template - Contac Us</title>
-    <meta name="author" content="Vecuro">
-    <meta name="description" content="Educino - Online Courses and Education HTML Template">
-    <meta name="keywords" content="academic, artist, center, club, coach, college, drive, driving, education, entertainment, gambling, golf, jackpot, knowledge, money, multipurpose, music, song, student">
+    <title>Obat.In - Contact</title>
+    <meta name="author" content="Black Plague">
+    <meta name="description" content="Obat.In - Contact">
+    <meta name="keywords" content="health, login, wellness, doctor, hospital, obat, obat.in">
     <meta name="robots" content="INDEX,FOLLOW">
 
     <!-- Mobile Specific Metas -->
@@ -264,12 +264,12 @@
     <div class="breadcumb-wrapper " data-bg-src="assets/img/breadcumb/breadcumb-bg.png">
         <div class="container z-index-common">
             <div class="breadcumb-content">
-                <h1 class="breadcumb-title">Contac Us</h1>
-                <p class="breadcumb-text">Search over 200 individual encyclopedias and reference books.</p>
+                <h1 class="breadcumb-title">Contact Us</h1>
+                <p class="breadcumb-text">Dapatkan pelayanan kesehatan terbaik dengan dokter terbaik</p>
                 <div class="breadcumb-menu-wrap">
                     <ul class="breadcumb-menu">
                         <li><a href="index.html">Home</a></li>
-                        <li>Contac Us</li>
+                        <li>Contact Us</li>
                     </ul>
                 </div>
             </div>
@@ -281,68 +281,52 @@
         <div class="container">
             <div class="row gx-80">
                 <div class="col-lg-6 col-xl-6 mb-30 mb-lg-0">
-                    <h2 class="h1 mt-n2">Get in Touch to Learn About Programmes</h2>
-                    <p class="fs-md mb-4 pb-2">become a partner school, or discover more about our work.</p>
+                    <h2 class="h1 mt-n2">Kenali Lebih Dalam Tentang Kami</h2>
+                    <p class="fs-md mb-4 pb-2">hubungi kami untuk mendapatkan informasi lebih lanjut</p>
                     <h3 class="border-title2 h5">Regional Office</h3>
                     <p class="contact-info">
                         <i class="fas fa-clock"></i>
-                        Office hours are 9am – 5pm <br> Monday-Thursday and 9am – 4.30pm on Friday.
+                        Office hours sekitar 09:00 – 17:00
                     </p>
                     <p class="contact-info">
                         <i class="fas fa-map-marker-alt"></i>
-                        1309 Beacon Street, Suite 300, Brookline, MA, 02446
+                        Pondok Cina, Beji, Kota Depok, Jawa Barat
                     </p>
                     <p class="contact-info">
                         <i class="fas fa-phone-alt"></i>
-                        <a class="text-inherit" href="tel:+11234562228">(00) 123 456 789</a>
+                        <a class="text-inherit" href="tel:+6221123456789">(021) 123 456 789</a>
                     </p>
                     <p class="contact-info">
                         <i class="fas fa-envelope"></i>
-                        <a class="text-inherit" href="mailto:hello@domainname.com">hello@domainname.com</a>
+                        <a class="text-inherit" href="mailto:obat.in@gmail.com">obat.in@gmail.com</a>
                     </p>
                     <div class="mega-hover rounded-20 mt-4 mt-lg-5 mb-4"><img src="assets/img/about/contact-1.jpg" alt="office" class="w-100"></div>
-                    <p class="font-title text-title fs-md fw-medium pt-xl-2 mb-2">Membership enquiries: <a href="tel:+04432907612" class="text-decoration-underline">+0443-290 7612</a></p>
-                    <p class="font-title text-title fs-md fw-medium mb-4">Principal Support: <a href="tel:+2256366989" class="text-decoration-underline">+225636-6989</a></p>
                 </div>
                 <div class="col-lg-6 col-xl-6">
                     <form action="mail.php" class="form-style5 ajax-contact">
                         <div class="vs-circle"></div>
-                        <h3 class="form-title">Enquire Now</h3>
-                        <p class="form-text">Creating the right learning environment to get the most out of each learning session.</p>
+                        <h3 class="form-title">Kontak Kami</h3>
+                        <p class="form-text">Apapun pertanyaan anda, kami siap melayani.</p>
                         <div class="form-group">
-                            <input type="text" name="name" id="name" placeholder="Complate Name">
+                            <input type="text" name="name" id="name" placeholder="Nama Lengkap">
                         </div>
                         <div class="form-group">
-                            <input type="text" name="email" id="email" placeholder="Email Address">
+                            <input type="text" name="email" id="email" placeholder="Email">
                         </div>
                         <div class="form-group">
-                            <input type="text" name="number" id="number" placeholder="Phone No">
+                            <input type="text" name="number" id="number" placeholder="Nomor Telpon">
                         </div>
                         <div class="form-group">
                             <select name="subject" id="subject">
-                                <option selected hidden disabled>Select Subject</option>
-                                <option value="Addmission Help">Addmission Help</option>
-                                <option value="Apply Scholarship">Apply Scholarship</option>
-                                <option value="Private Tutor">Private Tutor</option>
-                                <option value="Admission Session">Admission Session</option>
+                                <option selected hidden disabled>Pilih Topik</option>
+                                <option value="Administrasi">Administrasi</option>
+                                <option value="Layanan Kesehatan">Layanan Kesehatan</option>
+                                <option value="Kritik dan Saran">Kritik dan Saran</option>
                             </select>
                         </div>
                         <div class="form-group">
-                            <textarea name="message" id="message" placeholder="Write your message"></textarea>
+                            <textarea name="message" id="message" placeholder="Tulis Pesan"></textarea>
                         </div>
-                        <p class="form-text2">How would you prefer to be contacted?</p>
-                        <div class="row">
-                            <div class="col-auto form-group">
-                                <input type="radio" name="callchoice" id="callchoiceemail" value="Email" checked>
-                                <label for="callchoiceemail">E-mail</label>
-                            </div>
-                            <div class="col-auto form-group">
-                                <input type="radio" name="callchoice" id="callchoicephone" value="Phone">
-                                <label for="callchoicephone">Phone</label>
-                            </div>
-                        </div>
-                        <button type="submit" class="vs-btn">Apply Today</button>
-                        <p class="form-messages"><span class="sr-only">For message will display here</span></p>
                     </form>
                 </div>
             </div>
@@ -350,71 +334,10 @@
     </section>
     <div class="overflow-hidden rounded-20 space-bottom">
         <div class="container">
-            <iframe class="bdrs20" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d50437.32487690385!2d144.96230200000002!3d-37.805673!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad65d4c2b349649%3A0xb6899234e561db11!2sEnvato!5e0!3m2!1sen!2sbd!4v1677062621439!5m2!1sen!2sbd" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe class="bdrs20" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7930.385554146487!2d106.82592024915158!3d-6.369093274767126!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69ed01b68548ad%3A0x89aea3afc2b2e77d!2sUniversitas%20Gunadarma%20Kampus%20D!5e0!3m2!1sen!2sid!4v1692204327011!5m2!1sen!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div><!-- FAQ Area -->
-    <section class="space-extra-bottom">
-        <div class="container">
-            <div class="title-area wow fadeInUp text-center" data-wow-delay="0.1s">
-                <span class="sec-subtitle">FREQUENTLY ASKED QUESTIONS</span>
-                <h2 class="sec-title h1">Academic Faq's</h2>
-            </div>
-            <div class="accordion-style1">
-                <div class="accordion" id="faqVersion1">
-                    <div class="accordion-item">
-                        <div class="accordion-header" id="headingOne">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">What kind of tutors does Preply look for?</button>
-                        </div>
-                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#faqVersion1">
-                            <div class="accordion-body">
-                                <p>Sometimes, we don’t approve tutor profiles at the first attempt because the profile photo, video or description doesn’t meet our requirements. Make sure you use a real photo of yourself, take the time to record a short video and describe your strengths</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <div class="accordion-header" id="headingTwo">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Solar panels now that the Feed-in Tariff has closed?</button>
-                        </div>
-                        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#faqVersion1">
-                            <div class="accordion-body">
-                                <p>Sometimes, we don’t approve tutor profiles at the first attempt because the profile photo, video or description doesn’t meet our requirements. Make sure you use a real photo of yourself, take the time to record a short video and describe your strengths</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="accordion-item active">
-                        <div class="accordion-header" id="headingThree">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">What solar panels do Solarsense install?</button>
-                        </div>
-                        <div id="collapseThree" class="accordion-collapse collapse show" aria-labelledby="headingThree" data-bs-parent="#faqVersion1">
-                            <div class="accordion-body">
-                                <p>Sometimes, we don’t approve tutor profiles at the first attempt because the profile photo, video or description doesn’t meet our requirements. Make sure you use a real photo of yourself, take the time to record a short video and describe your strengths</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <div class="accordion-header" id="headingFour">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">How to Add Battery Backup to an Existing?</button>
-                        </div>
-                        <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#faqVersion1">
-                            <div class="accordion-body">
-                                <p>Sometimes, we don’t approve tutor profiles at the first attempt because the profile photo, video or description doesn’t meet our requirements. Make sure you use a real photo of yourself, take the time to record a short video and describe your strengths</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <div class="accordion-header" id="headingFive">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">What subjects and ages does Tutor House cover?</button>
-                        </div>
-                        <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#faqVersion1">
-                            <div class="accordion-body">
-                                <p>Sometimes, we don’t approve tutor profiles at the first attempt because the profile photo, video or description doesn’t meet our requirements. Make sure you use a real photo of yourself, take the time to record a short video and describe your strengths</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+    
     <!--==============================
     Footer Area
   ==============================-->
@@ -430,8 +353,8 @@
                             <div class="vs-widget-about">
                                 <div class="footer-logo"> <a href="index.html"><img src="assets/img/logo-white.svg" alt="logo"></a> </div>
                                 <p class="footer-text">Lorem ipsum dolor sit amet, consectet rem ips dolor sit amet. sum dolor sit amet, consectet e dolor sit amet, comod.</p>
-                                <p class="footer-info"><i class="fal fa-phone-alt"></i><a class="text-inherit" href="tel:++11234562228">(00) 123 456 789</a></p>
-                                <p class="footer-info"><i class="fal fa-envelope"></i><a class="text-inherit" href="mailto:info@example.com">hello@domainname.com</a></p>
+                                <p class="footer-info"><i class="fal fa-phone-alt"></i><a class="text-inherit" href="tel:+6221123 456 789">(021) 123 456 789</a></p>
+                                <p class="footer-info"><i class="fal fa-envelope"></i><a class="text-inherit" href="mailto:obat.in@gmail.com">obat.in@gmail.com</a></p>
                             </div>
                         </div>
                     </div>
@@ -491,14 +414,9 @@
             <div class="container">
                 <div class="row justify-content-between align-items-center">
                     <div class="text-center col-lg-auto">
-                        <p class="copyright-text">Copyright <i class="fal fa-copyright"></i> 2023 <a href="index.html">Educino</a>. All Rights Reserved By <a href="https://themeforest.net/user/vecuro_themes">Vecuro</a></p>
+                        <p class="copyright-text">Copyright <i class="fal fa-copyright"></i> 2023 <a href="index.html">Obat.In</a>. All Rights Reserved</p>
                     </div>
                     <div class="col-auto d-none d-lg-block">
-                        <div class="social-style1">
-                            <a href="#"><i class="fab fa-facebook-f"></i>Facebook</a>
-                            <a href="#"><i class="fab fa-twitter"></i>Twitter</a>
-                            <a href="#"><i class="fab fa-linkedin-in"></i>Linked In</a>
-                        </div>
                     </div>
                 </div>
             </div>
