--- a/login.html
+++ b/login.html
@@ -94,7 +94,7 @@
                         </div>
                         <br>
                         <div class="row text-center">
-                            <button type="submit" class="vs-btn mb-2">Login</button>
+                            <button type="submit" class="vs-btn mb-2" onclick="window.location.href = 'index.html'">Login</button>
                             <a class="forget-link" href="register.html">Forgot password?</a>
                         </div>
                     </div>
