--- a/register.html
+++ b/register.html
@@ -87,6 +87,10 @@
                             <label for="born_year">Born Year:</label>
                             <input type="date" autocomplete="off" name="born_year" id="born_year">
                         </div>
+                        <div class="form-group">
+                            <label for="phone">Phone Number:</label>
+                            <input type="text" autocomplete="off"  name="phone" id="phone" placeholder="Enter phone">
+                        </div>
                         <!-- radio gender -->
                         <div class="form-group">
                             <label for="gender">Gender:</label>
@@ -101,7 +105,7 @@
                             </div>
                         </div>
                         <div class="row text-center">
-                            <button type="submit" class="vs-btn">Register</button>
+                            <button type="submit" class="vs-btn" onclick="window.location.href = 'login.html'">Register</button>
                         </div>
                     </div>
                 </div>
