--- a/login.html
+++ b/login.html
@@ -76,20 +76,20 @@
                     <div class="form-style4 login" data-bg-src="assets/img/bg/course-bg-pattern.jpg">
                         <h2 class="form-title text-center">Login</h2>
                         <div class="form-group">
-                            <label for="email">Email:</label>
-                            <input type="text" autocomplete="off" name="email" id="email" placeholder="Username or email address">
+                            <label for="email">Email address:</label>
+                            <input type="text" autocomplete="off" name="email" id="email" placeholder="Masukkan Email">
                         </div>
                         <div class="form-group">
                             <label for="full_name">Password:</label>
-                            <input type="text" autocomplete="off" name="email" id="password" placeholder="Password">
+                            <input type="text" autocomplete="off" name="email" id="password" placeholder="Masukkan Password">
                         </div>
                         <div class="row justify-content-between">
                             <div class="col-auto form-group">
                                 <input type="checkbox" name="rememberlogin" id="rememberlogin">
-                                <label for="rememberlogin">Remember me</label>
+                                <label for="rememberlogin">Ingat saya</label>
                             </div>
                             <div class="col-auto form-group">
-                                <a class="forget-link" href="register.html">Did not have an account?</a>
+                                <a class="forget-link" href="register.html">Belum punya akun?</a>
                             </div>
                         </div>
                         <br>
