--- a/register.html
+++ b/register.html
@@ -76,32 +76,40 @@
                     <div class="form-style4 login" data-bg-src="assets/img/bg/course-bg-pattern.jpg">
                         <h2 class="form-title text-center">Register</h2>
                         <div class="form-group">
-                            <label for="name">Full Name:</label>
-                            <input type="text" autocomplete="off" name="name" id="name" placeholder="Full name">
+                            <label for="name">Nama Panjang:</label>
+                            <input type="text" autocomplete="off" name="name" id="name" placeholder="Masukkan nama panjang">
                         </div>
                         <div class="form-group">
-                            <label for="email">Email address:</label>
-                            <input type="text" autocomplete="off" name="email" id="email" placeholder="Username or email address">
+                            <label for="email">Email Address:</label>
+                            <input type="text" autocomplete="off" name="email" id="email" placeholder="Masukkan email address">
                         </div>
                         <div class="form-group">
-                            <label for="born_year">Born Year:</label>
+                            <label for="born_year">Tanggal Lahir:</label>
                             <input type="date" autocomplete="off" name="born_year" id="born_year">
                         </div>
                         <div class="form-group">
-                            <label for="phone">Phone Number:</label>
+                            <label for="phone">No Telfon:</label>
                             <input type="text" autocomplete="off"  name="phone" id="phone" placeholder="Enter phone">
                         </div>
                         <!-- radio gender -->
                         <div class="form-group">
                             <label for="gender">Gender:</label>
                             <select name="gender" id="gender">
-                              <option value="male">Male</option>
-                              <option value="female">Female</option>
+                              <option value="male">Pria</option>
+                              <option value="female">Wanita</option>
                             </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="password">Password:</label>
+                            <input type="password" autocomplete="off" name="password" id="password" placeholder="Masukkan password">
+                        </div>
+                        <div class="form-group">
+                            <label for="conf_password">Confirm Password:</label>
+                            <input type="text" autocomplete="off" name="conf_password" id="conf_password" placeholder="Masukkan kembali password">
                         </div>
                         <div class="row justify-content-between">
                             <div class="col-auto form-group">
-                                <a class="forget-link" href="login.html">Already have an account?</a>
+                                <a class="forget-link" href="login.html">Sudah punya akun?</a>
                             </div>
                         </div>
                         <div class="row text-center">
