feat: konsul and form patient

--- a/form-patient.html
+++ b/form-patient.html
@@ -264,155 +264,122 @@
                 </div>
             </div>
         </div>
-    </header><!--==============================
-    Breadcumb
-============================== -->
-    <div class="breadcumb-wrapper " data-bg-src="assets/img/breadcumb/breadcumb-bg.png">
-        <div class="container z-index-common">
-            <div class="breadcumb-content">
-                <h1 class="breadcumb-title">Detail Dokter</h1>
-                <div class="breadcumb-menu-wrap">
-                    <ul class="breadcumb-menu">
-                        <li><a href="index.html">Home</a></li>
-                        <li>Detail Dokter</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div><!--==============================
-      Team Area
-  ==============================-->
+    </header>
     <section class="space-top space-extra-bottom">
         <div class="container">
-            <div class="row justify-content-center align-items-center gx-80 mb-lg-4 pb-3">
-                <div class="col-lg-5 col-xl-auto order-lg-2 mb-4 mb-lg-0 pb-2 pb-lg-0">
-                    <div class="img-box1 style3">
-                        <div class="vs-circle">
-                            <div class="mega-hover">
-                                <img src="assets/img/about/testimonial_doctor.png" alt="banner">
-                            </div>
+            <div class="row gx-60 mx-auto justify-content-center">
+                <div class="col-lg-6">
+                    <div class="form-style4 login" data-bg-src="assets/img/bg/course-bg-pattern.jpg">
+                        <h2 class="form-title text-center">Data Pasien</h2>
+                        <div class="form-group">
+                            <label for="name">Nama Pasien:</label>
+                            <input type="text" autocomplete="off" name="name" id="name"
+                                placeholder="Masukkan nama pasien">
+                        </div>
+                        <div class="form-group">
+                            <label for="born_year">Tanggal Lahir Pasien:</label>
+                            <input type="date" autocomplete="off" name="born_year" id="born_year">
+                        </div>
+                        <!-- radio gender -->
+                        <div class="form-group">
+                            <label for="gender">Gender:</label>
+                            <select name="gender" id="gender">
+                                <option value="male">Pria</option>
+                                <option value="female">Wanita</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="weight">Berat Badan:</label>
+                            <input type="text" autocomplete="off" name="weight" id="weight"
+                                placeholder="Masukkan nama pasien">
+                        </div>
+                        <div class="form-group">
+                            <label for="height">Tinggi Badan:</label>
+                            <input type="text" autocomplete="off" name="height" id="height"
+                                placeholder="Masukkan nama pasien">
+                        </div>
+                        <div class="row text-center">
+                            <button type="submit" class="vs-btn"
+                                onclick="window.location.href = 'login.html'">Lanjut Chat</button>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 col-xl order-lg-1 mb-4 mb-md-0">
-                    <div class="team-details">
-                        <h2 class="team-name h2">Dr. Moniqa</h2>
-                        <p class="team-degi">Dokter Umum</p>
-                        <span class="team-courses">100+ Konsultasi Selesai</span>
-                        <span class="team-rate"><span class="team-price">Rp 50.000 </span>/ per konsul</span>
-                        <p class="team-experi">6+ tahun pengalaman kerja</p>
-                        <div class="team-review"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                                class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
-                        <div class="social-style2">
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-twitter"></i></a>
-                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-3 col-xl order-lg-3">
-                    <h4 class="border-title2">Kualifikasi</h4>
-                    <div class="graduation-media">
-                        <h6 class="year">2001.</h6>
-                        <div class="media-body">
-                            <h6 class="media-title">Fakultas Kedokteran</h6>
-                            <p class="media-text">Universitas Indonesia</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <h2 class="border-title2 mb-4">Sejarah Dokter</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                deserunt mollit anim id est laborums nisi ut aliquip ex ea commosi ut aliquip ex ea commodo cons magna
-                aliqua. Ut enim ad minim veniam equatd</p>
-            <div class="text-center">
-                <button type="submit" class="vs-btn mb-2" onclick="window.location.href = 'form-patient.html'">Mulai
-                    Konsultasi</button>
             </div>
         </div>
-
     </section>
     <!--==============================
     Footer Area
   ==============================-->
-    <footer class="footer-wrapper footer-layout1">
-        <div class="shape-mockup jump d-none d-xxxl-block" data-bottom="0%" data-left="-270px">
-            <div class="vs-border-circle"></div>
-        </div>
-        <div class="widget-area">
-            <div class="container">
-                <div class="row justify-content-between">
-                    <div class="col-md-6 col-xl-auto">
-                        <div class="widget footer-widget">
-                            <div class="vs-widget-about">
-                                <div class="footer-logo"> <a href="index.html"><img src="assets/img/logo-white.svg"
-                                            alt="logo"></a> </div>
-                                <h5>Layanan Pengaduan Konsumen</h5>
-                                <p class="footer-text">PT Media Dokter Investama
-                                    Jl. H.R. Rasuna Said Kav B32-33, Jakarta Selatan
+  <footer class="footer-wrapper footer-layout1">
+    <div class="shape-mockup jump d-none d-xxxl-block" data-bottom="0%" data-left="-270px">
+        <div class="vs-border-circle"></div>
+    </div>
+    <div class="widget-area">
+        <div class="container">
+            <div class="row justify-content-between">
+                <div class="col-md-6 col-xl-auto">
+                    <div class="widget footer-widget">
+                        <div class="vs-widget-about">
+                            <div class="footer-logo"> <a href="index.html"><img src="assets/img/logo-white.svg" alt="logo"></a> </div>
+                            <h5>Layanan Pengaduan Konsumen</h5>
+                            <p class="footer-text">PT Media Dokter Investama
+                                Jl. H.R. Rasuna Said Kav B32-33, Jakarta Selatan
                                 </p>
-                                <p class="footer-info"><i class="fal fa-phone-alt"></i><a class="text-inherit"
-                                        href="tel:++11234562228">021-3110-6999</a></p>
-                                <p class="footer-info"><i class="fal fa-envelope"></i><a class="text-inherit"
-                                        href="mailto:info@example.com">help@obatin.com</a></p>
-                            </div>
+                            <p class="footer-info"><i class="fal fa-phone-alt"></i><a class="text-inherit" href="tel:++11234562228">021-3110-6999</a></p>
+                            <p class="footer-info"><i class="fal fa-envelope"></i><a class="text-inherit" href="mailto:info@example.com">help@obatin.com</a></p>
                         </div>
                     </div>
-                    <div class="col-6 col-md-6 col-xl-auto">
-                        <div class="widget nav_menu footer-widget">
-                            <h3 class="widget_title">Site Map</h3>
-                            <div class="menu-all-pages-container footer-menu">
-                                <ul class="menu">
-                                    <li><a href="">FAQ</a></li>
-                                    <li><a href="">Blog</a></li>
-                                    <li><a href="">Syarat & Ketentuan</a></li>
-                                    <li><a href="">Kebijakan Privasi</a></li>
-                                    <li><a href="">Promo</a></li>
-                                </ul>
-                            </div>
+                </div>
+                <div class="col-6 col-md-6 col-xl-auto">
+                    <div class="widget nav_menu footer-widget">
+                        <h3 class="widget_title">Site Map</h3>
+                        <div class="menu-all-pages-container footer-menu">
+                            <ul class="menu">
+                                <li><a href="">FAQ</a></li>
+                                <li><a href="">Blog</a></li>
+                                <li><a href="">Syarat & Ketentuan</a></li>
+                                <li><a href="">Kebijakan Privasi</a></li>
+                                <li><a href="">Promo</a></li>
+                            </ul>
                         </div>
                     </div>
-                    <div class="col-6 col-md-6 col-xl-auto">
-                        <div class="widget nav_menu footer-widget">
+                </div>
+                <div class="col-6 col-md-6 col-xl-auto">
+                    <div class="widget nav_menu footer-widget">
 
-                            <div class="menu-all-pages-container footer-menu">
-                                <ul class="menu">
-                                    <br>
-                                    <br>
-                                    <br>
-                                    <li><a href="about.html">Karir</a></li>
-                                    <li><a href="contact.html">Security</a></li>
-                                    <li><a href="blog.html">Media</a></li>
-                                    <li><a href="event-details.html">Corporate Partnership</a></li>
-                                </ul>
-                            </div>
+                        <div class="menu-all-pages-container footer-menu">
+                            <ul class="menu">
+                                <br>
+                                <br>
+                                <br>
+                                <li><a href="about.html">Karir</a></li>
+                                <li><a href="contact.html">Security</a></li>
+                                <li><a href="blog.html">Media</a></li>
+                                <li><a href="event-details.html">Corporate Partnership</a></li>
+                            </ul>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="copyright-wrap">
-            <div class="container">
-                <div class="row justify-content-between align-items-center">
-                    <div class="text-center col-lg-auto">
-                        <p class="copyright-text">Copyright <i class="fal fa-copyright"></i> 2023 <a
-                                href="index.html">Educino</a>. All Rights Reserved By <a
-                                href="https://themeforest.net/user/vecuro_themes">Vecuro</a></p>
-                    </div>
-                    <div class="col-auto d-none d-lg-block">
-                        <div class="social-style1">
-                            <a href="#"><i class="fab fa-facebook-f"></i>Facebook</a>
-                            <a href="#"><i class="fab fa-twitter"></i>Twitter</a>
-                            <a href="#"><i class="fab fa-linkedin-in"></i>Linked In</a>
-                        </div>
+    </div>
+    <div class="copyright-wrap">
+        <div class="container">
+            <div class="row justify-content-between align-items-center">
+                <div class="text-center col-lg-auto">
+                    <p class="copyright-text">Copyright <i class="fal fa-copyright"></i> 2023 <a href="index.html">Educino</a>. All Rights Reserved By <a href="https://themeforest.net/user/vecuro_themes">Vecuro</a></p>
+                </div>
+                <div class="col-auto d-none d-lg-block">
+                    <div class="social-style1">
+                        <a href="#"><i class="fab fa-facebook-f"></i>Facebook</a>
+                        <a href="#"><i class="fab fa-twitter"></i>Twitter</a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i>Linked In</a>
                     </div>
                 </div>
             </div>
         </div>
-    </footer>
+    </div>
+</footer> <!-- Scroll To Top -->
     <a href="#" class="scrollToTop scroll-btn"><i class="far fa-arrow-up"></i></a>
 
     <!--********************************
