--- a/consultation.html
+++ b/consultation.html
@@ -108,7 +108,7 @@
                         <a href="#">Pages</a>
                         <ul class="sub-menu">
                             <li><a href="team.html">Our Tutors</a></li>
-                            <li><a href="team-details.html">Tutor Details</a></li>
+                            <li><a href="doctor-details.html">Tutor Details</a></li>
                             <li><a href="become-tutor.html">Become Tutor</a></li>
                             <li><a href="find-tutor.html">Find Tutor</a></li>
                             <li><a href="academic.html">Academic</a></li>
@@ -199,7 +199,7 @@
                                         <a href="blog.html">Tutor</a>
                                         <ul class="sub-menu">
                                             <li><a href="team.html">Our Tutors</a></li>
-                                            <li><a href="team-details.html">Tutor Details</a></li>
+                                            <li><a href="doctor-details.html">Tutor Details</a></li>
                                             <li><a href="become-tutor.html">Become Tutor</a></li>
                                             <li><a href="find-tutor.html">Find Tutor</a></li>
                                         </ul>
@@ -237,7 +237,7 @@
                                             <li><a href="#">Pagelist 4</a>
                                                 <ul>
                                                     <li><a href="team.html">Our Tutors</a></li>
-                                                    <li><a href="team-details.html">Tutor Details</a></li>
+                                                    <li><a href="doctor-details.html">Tutor Details</a></li>
                                                     <li><a href="become-tutor.html">Become Tutor</a></li>
                                                     <li><a href="find-tutor.html">Find Tutor</a></li>
                                                     <li><a href="blog.html">Blog</a></li>
@@ -294,7 +294,7 @@
                 <div class="col-sm-6 col-lg-4 col-xxl-3">
                     <div class="team-style2 has-border">
                         <div class="team-content">
-                            <h4 class="team-name h5"><a href="team-details.html">Dr. Moniqa</a></h4>
+                            <h4 class="team-name h5"><a href="doctor-details.html">Dr. Moniqa</a></h4>
                             <p class="team-degi">Dokter Umum</p>
                             <span class="team-courses">100+ Konsultasi Selesai</span>
                             <div class="team-img">
@@ -310,7 +310,7 @@
                 <div class="col-sm-6 col-lg-4 col-xxl-3">
                     <div class="team-style2 has-border">
                         <div class="team-content">
-                            <h4 class="team-name h5"><a href="team-details.html">Dr. Lim Jen</a></h4>
+                            <h4 class="team-name h5"><a href="doctor-details.html">Dr. Lim Jen</a></h4>
                             <p class="team-degi">Dokter Umum</p>
                             <span class="team-courses">100+ Konsultasi Selesai</span>
                             <div class="team-img">
@@ -326,7 +326,7 @@
                 <div class="col-sm-6 col-lg-4 col-xxl-3">
                     <div class="team-style2 has-border">
                         <div class="team-content">
-                            <h4 class="team-name h5"><a href="team-details.html">Dr. Gracia</a></h4>
+                            <h4 class="team-name h5"><a href="doctor-details.html">Dr. Gracia</a></h4>
                             <p class="team-degi">Sp. Anak (Penyakit Tropik-Infeksi)</p>
                             <span class="team-courses">100+ Konsultasi Selesai</span>
                             <div class="team-img">
@@ -342,7 +342,7 @@
                 <div class="col-sm-6 col-lg-4 col-xxl-3">
                     <div class="team-style2 has-border">
                         <div class="team-content">
-                            <h4 class="team-name h5"><a href="team-details.html">Dr. Diana</a></h4>
+                            <h4 class="team-name h5"><a href="doctor-details.html">Dr. Diana</a></h4>
                             <p class="team-degi">Sp. Anak</p>
                             <span class="team-courses">100+ Konsultasi Selesai</span>
                             <div class="team-img">
@@ -358,7 +358,7 @@
                 <div class="col-sm-6 col-lg-4 col-xxl-3">
                     <div class="team-style2 has-border">
                         <div class="team-content">
-                            <h4 class="team-name h5"><a href="team-details.html">Dr. Handoko</a></h4>
+                            <h4 class="team-name h5"><a href="doctor-details.html">Dr. Handoko</a></h4>
                             <p class="team-degi">Sp. Penyakit Dalam</p>
                             <span class="team-courses">100+ Konsultasi Selesai</span>
                             <div class="team-img">
@@ -374,7 +374,7 @@
                 <div class="col-sm-6 col-lg-4 col-xxl-3">
                     <div class="team-style2 has-border">
                         <div class="team-content">
-                            <h4 class="team-name h5"><a href="team-details.html">Dr. Andy</a></h4>
+                            <h4 class="team-name h5"><a href="doctor-details.html">Dr. Andy</a></h4>
                             <p class="team-degi">Sp. Jiwa</p>
                             <span class="team-courses">100+ Konsultasi Selesai</span>
                             <div class="team-img">
@@ -390,7 +390,7 @@
                 <div class="col-sm-6 col-lg-4 col-xxl-3">
                     <div class="team-style2 has-border">
                         <div class="team-content">
-                            <h4 class="team-name h5"><a href="team-details.html">Dr. Lalo</a></h4>
+                            <h4 class="team-name h5"><a href="doctor-details.html">Dr. Lalo</a></h4>
                             <p class="team-degi">Dokter Umum</p>
                             <span class="team-courses">100+ Konsultasi Selesai</span>
                             <div class="team-img">
@@ -406,7 +406,7 @@
                 <div class="col-sm-6 col-lg-4 col-xxl-3">
                     <div class="team-style2 has-border">
                         <div class="team-content">
-                            <h4 class="team-name h5"><a href="team-details.html">Dr. Salamonca</a></h4>
+                            <h4 class="team-name h5"><a href="doctor-details.html">Dr. Salamonca</a></h4>
                             <p class="team-degi">Sp. THT</p>
                             <span class="team-courses">100+ Konsultasi Selesai</span>
                             <div class="team-img">
